feat: configure gateway for AWS deployment
- Route URLs via env vars (ADMIN_SERVICE_URL, PUBLIC_SERVICE_URL) for ECS Service Discovery
- CORS allowed origins read from CORS_ALLOWED_ORIGINS env var
- Add Spring Security (permit all) and Actuator on management port 8090

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>